fixed style on small screen

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -71,7 +71,7 @@ body {
     text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
     .container-game {
         border-radius: 25px;
         padding: 0 1%;
